--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name"    : "nightWatch-bones",
-  "version" : "0.1.0",
-
+  "name": "nightWatch-bones",
+  "version": "0.1.0",
   "dependencies": {
     "chromedriver": "^2.27.2",
     "nightwatch": "~0.9.12",
-    "nightwatch-html-reporter": "~1.0.8"
+    "nightwatch-html-reporter": "~1.0.8",
+    "platform": "^1.3.3"
   }
 }
